kiki/src/examples/should_fail/lowercase_terminal_enum_name.kiki
start Epsilon

struct Epsilon

terminal token {
    $Num: isize
}
